# Imagined-Speech-Decoding

./: .gitignore  BCIC2020Track3_train.py  Detailed_Per_Subject_Metrics.csv  FAST.py  FAST_Subject_Metrics.csv  Global_Shap_Analysis.py  LICENSE  Model_Comparison_Metrics.csv  README.md  Track3_Answer Sheet_Test.xlsx  model_benchmark.py  pyproject.toml  requirements.txt  utils.py
FAST/: .gitignore  BCIC2020Track3_preprocess.py  BCIC2020Track3_run.sh  BCIC2020Track3_train.py  BCIC2020Track3_train_official_split.py  FAST.py  FAST_Subject_Metrics.csv  README.md  Subject01_Trial0.csv  artifact_analysis.py  define_train_tsception.py  explain_fast.py  model_benchmark.py
FAST/EEGNET_HEAD_Results_1/: 0-Tune.csv  0_model.pth  1-Tune.csv  10-Tune.csv  11-Tune.csv  12-Tune.csv  13-Tune.csv  14-Tune.csv  140_model.pth  2-Tune.csv  210_model.pth  280_model.pth  3-Tune.csv  4-Tune.csv  5-Tune.csv  6-Tune.csv  7-Tune.csv  70_model.pth  8-Tune.csv  9-Tune.csv
FAST/Results_TSception_LOFO/: sub-0_best.pth  sub-0_fold-1_history.csv  sub-0_fold-2_history.csv  sub-0_fold-3_history.csv  sub-0_fold-4_history.csv  sub-0_fold-5_history.csv  sub-0_preds.csv  sub-0_preds_metrics.csv  sub-10_best.pth  sub-10_fold-1_history.csv  sub-10_fold-2_history.csv  sub-10_fold-3_history.csv  sub-10_fold-4_history.csv  sub-10_preds.csv  (+106 more)
configs/: default.yaml
notebooks/: Implement_SVM_on_imagined_speech (1).ipynb  imagined-speech-fast-itay.ipynb
scripts/: benchmark.py  preprocess.py  train_fast.py  utils.py
tests/: conftest.py  test_data.py  test_model.py  test_scripts.py  test_train.py  test_utils.py
(+547 files in other folders)
