[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-eeg"
version = "1.0.0"
description = "Functional Areas Spatio-Temporal Transformer for EEG Classification"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "torch>=2.0.0",
    "lightning>=2.0.0",
    "transformers>=4.30.0",
    "einops>=0.6.0",
    "h5py>=3.0.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.2.0",
    "torchmetrics>=1.0.0",
    "openpyxl>=3.1.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
